Fixing high contrast code slide text color

--- a/pantheon-theme/styles/screen-16x10.css
+++ b/pantheon-theme/styles/screen-16x10.css
@@ -441,6 +441,14 @@ su
     overflow: scroll;
     max-height: 500px;
 }
+.slide.code-block code {
+  color: #000;
+}
+
+.slide.code-block code mark {
+  background-color: #efd01b94;
+  color: #000;
+}
 
 .slide code {
   color: #fff;
